# AWS_VPC_Graph

./: .gitignore  README.md  pyproject.toml
docs/: LESSONS_LEARNED.md  PLAN.md  PROJECT_AIM.md
sample_data/: sample_flow_log.txt
tests/: test_aggregator.py  test_discovery.py  test_graph_builder.py  test_parser.py
vpc_graph/: __init__.py  __main__.py  aggregator.py  cli.py  discovery.py  graph_builder.py  parser.py  renderer.py
